[gd_scene load_steps=5 format=3 uid="uid://dyallalkeim1f"]

[ext_resource type="Script" path="res://netcode/main.gd" id="1_2afmc"]
[ext_resource type="Script" path="res://netcode/ServerBrowser.gd" id="2_4kyfb"]
[ext_resource type="PackedScene" uid="uid://bjahfyp48dpwn" path="res://netcode/server_info.tscn" id="3_8utcf"]
[ext_resource type="PackedScene" uid="uid://cbojdoijafiyk" path="res://ui/ip_panel.tscn" id="4_5v8nh"]

[node name="main" type="Control"]
layout_mode = 3
anchor_left = 0.488715
anchor_top = 0.436728
anchor_right = 0.536458
anchor_bottom = 0.5
offset_left = 36.0
offset_top = 2.0
offset_right = 36.0
offset_bottom = 2.0
script = ExtResource("1_2afmc")
metadata/_edit_use_anchors_ = true

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_left = 89.0
offset_top = -89.0
offset_right = 138.0
offset_bottom = -51.0
script = ExtResource("2_4kyfb")
serverInfo = ExtResource("3_8utcf")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="ip_panel" parent="ServerBrowser" instance=ExtResource("4_5v8nh")]

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser"]
layout_mode = 0
offset_left = -637.0
offset_top = -114.0
offset_right = 406.0
offset_bottom = -31.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = -153.0
offset_top = -269.0
offset_right = 205.0
offset_bottom = -201.0
theme_override_font_sizes/font_size = 40
text = "Waiting for server..."

[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
